# vgmdec

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  ansicon.c  bintest.c  cached_file_reader.c  cached_file_reader.h  data.txt  file_reader.h  file_reader_cached.c  file_reader_cached.h  file_reader_cached_fatfs.c  file_reader_cached_fatfs.h  fixed.h  fixedpoint.c  fixedpoint.h  make_const_tables.c  nesapu.c  nesapu.h  platform.h  reader_test.c  vgm.c  vgm.h  vgm_conf.h  vgm_conf_linux.h  vgm_conf_macosx.h  vgm_conf_windows.h  vgmdec.c  vgmdump.c  vgmplay.c  vgmspectrum.c
docs/: Bin_Calc.xlsx
fft_q15/: fft_q15.c
test/Castlevania/: .file.cat
test/Contra_(NES)/: .file.cat
test/Final_Mission/: .file.cat
test/Gradius_II/: .file.cat
test/Life_Force/: .file.cat
test/Mega_Man/: .file.cat
test/Mega_Man_2/: .file.cat
test/Ninja_Gaiden/: .file.cat
test/Shadow_of_the_Ninja/: .file.cat
test/Super_Mario_Bros/: .file.cat
